--- a/ETech.WebApp/NCC/MasterPage.Master
+++ b/ETech.WebApp/NCC/MasterPage.Master
@@ -4,12 +4,97 @@
 
 <html>
 <head runat="server">
-    <title></title>
+
+    <title>Master Page</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" charset="utf-8"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="../wwwroot/font-awsome/css/all.css">
+    <link rel="stylesheet" href="../wwwroot/css/nhacungcap.css">
+    <script src="../wwwroot/js/nhacungcap.js"></script>
+
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
 <body>
     <form id="form1" runat="server">
+
+        <header>
+            <img src="../wwwroot/img/icon/logo_text.png" alt="logo" class="logo">
+            <nav class="header__nav-admin">
+                <li class="header__menu-item header__has-child">
+                    <div class="header__name-admin">
+                        <h3>Supplier</h3>
+                        <p>ABC123</p>
+                    </div>
+                    <a href="#" class="header__menu-link">
+                        <i class="far fa-user-circle fa-2x" style="font-size: 40px"></i>
+                        <i class="fas fa-chevron-down chevron-down fa-xs fa-fw" style="color: #c0c0c0;"></i>
+                    </a>
+                    <ul class="header__menu-child">
+                        <li class="header__menu-child-item">
+                            <a href="QuanLyHoSo.aspx" class="header__menu-child-link">Quản lý hồ sơ</a>
+                        </li>
+                        <li class="header__menu-child-item">
+                            <a href="#" class="header__menu-child-link">Đăng xuất<i class="fas fa-sign-out-alt" style="margin-left: 5px;"></i></a>
+                        </li>
+                    </ul>
+                </li>
+            </nav>
+        </header>
+
+        <div class="side-bar">
+            <h4>TÍNH NĂNG QUẢN TRỊ</h4>
+            <div class="menu-side-bar">
+                <div class="menu-item">
+                    <a href="QuanLyHoSo.aspx"><i class="fas fa-stream" style="color: #c0c0c0"></i>Quản lý hồ sơ</a>
+                </div>
+                <div class="menu-item">
+                    <a href="QuanLyThongKe.aspx"><i class="fas fa-stream" style="color: #c0c0c0"></i>Thống kê báo cáo</a>
+                </div>
+                <div class="menu-item">
+                    <a href="QuanLyKhachHang.aspx"><i class="fas fa-stream" style="color: #c0c0c0"></i>Khách hàng thân thiết</a>
+                </div>
+                <div class="menu-item">
+                    <a class="sub-btn">
+                        <i class="fas fa-stream" style="color: #c0c0c0"></i>Quản lý đơn hàng
+                  <i class="fas fa-chevron-right side-bar_dropdown"></i>
+                    </a>
+                    <div class="sub-menu">
+                        <a href="QuanLyDonHang.aspx" class="sub-item">Chờ duyệt</a>
+                        <a href="/Admin/quanlyncc.html" class="sub-btn">Đang vận chuyển</a>
+                        <a href="/Admin/quanlynguoidung.html" class="sub-item">Đã thanh toán</a>
+                        <a href="/Admin/quanlynguoidung.html" class="sub-item">Đã huỷ</a>
+                    </div>
+                </div>
+                <div class="menu-item">
+                    <a href="QuanLySanPham.aspx"><i class="fas fa-stream" style="color: #c0c0c0"></i>Quản lý sản phẩm</a>
+                </div>
+                <div class="menu-item">
+                    <a href="QuanLyKhuyenMai.aspx"><i class="fas fa-stream" style="color: #c0c0c0"></i>Quản lý khuyến mãi</a>
+                </div>
+                <div class="menu-item">
+                    <a href="YeuCauVanChuyen.aspx"><i class="fas fa-stream" style="color: #c0c0c0"></i>Yêu cầu vận chuyển</a>
+                </div>
+                <div class="menu-item">
+                    <a class="sub-btn">
+                        <i class="fas fa-stream" style="color: #c0c0c0"></i>Yêu cầu danh mục
+                  <i class="fas fa-chevron-right side-bar_dropdown"></i>
+                    </a>
+                    <div class="sub-menu">
+                        <a href="YeuCauDanhMuc.aspx" class="sub-item">Yêu cầu xoá</a>
+                        <a href="#" class="sub-item">Yêu cầu sửa</a>
+                        <a href="#" class="sub-item">Yêu cầu thêm</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <div>
             <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
             </asp:ContentPlaceHolder>
