--- a/ETech.WebApp/KH/MasterPage.Master
+++ b/ETech.WebApp/KH/MasterPage.Master
@@ -4,12 +4,134 @@
 
 <html>
 <head runat="server">
-    <title></title>
-    <asp:ContentPlaceHolder ID="head" runat="server">
-    </asp:ContentPlaceHolder>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MasterPage</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
+
+    <link rel="stylesheet" href="../wwwroot/font-awsome/css/all.css">
+    <link rel="stylesheet" href="../wwwroot/css/kh_masterpage.css">
+
+<asp:ContentPlaceHolder ID="head" runat="server">
+</asp:ContentPlaceHolder>
 </head>
 <body>
     <form id="form1" runat="server">
+        <header class="MP__container">
+            <div class="MP__header1">
+                <div class="MP__header-logo">
+                    <img src="../wwwroot/img/icon/logo_text.png" alt="LOGO">
+                </div>
+                <div class="MP__header-search">
+                    <input class="form-control" placeholder="Tìm kiếm..." type="search" aria-label="Search">
+                    <button class="btn" type="submit"><i class="fas fa-search" style="color: #000"></i></button>
+                </div>
+
+                <div class="MP__header-items">
+                    <a href="#"><i class="fas fa-shopping-cart fa-2x" style="color: #3e67b9"></i></a>
+                    <div class="MP__giohang">
+                        <div>0</div>
+                        <p>Giỏ hàng</p>
+                    </div>
+                    <a href="#"><i class="far fa-user fa-2x"></i></a>
+                    <a href="#"><i class="fi fi-rr-User"></i></a>
+                    <div class="MP__header-item">
+                        <a href="#">Đăng Ký</a>
+                        <a href="#">Đăng Nhập</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="MP__header2">
+                <ul class="menu">
+                    <li class="menu-item">
+                        <a href="#" class="menu-link">Trang chủ</a>
+                    </li>
+                    <li class="menu-item has-child">
+                        <a href="#" class="menu-link">
+                            <span>Điện thoại</span>
+                            <i class="fa fa-angle-down fa-fw"></i>
+                        </a>
+                        <ul class="menu-child">
+                            <li class="menu-child-item">
+                                <a href="#" class="menu-child-link">Apple</a>
+                            </li>
+                            <li class="menu-child-item">
+                                <a href="#" class="menu-child-link">Samsung</a>
+                            </li>
+                            <li class="menu-child-item">
+                                <a href="#" class="menu-child-link">Oppo</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="menu-item">
+                        <a href="#" class="menu-link">Laptop</a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="#" class="menu-link">Tablet</a>
+                    </li>
+                    <li class="menu-item has-child">
+                        <a href="#" class="menu-link">
+                            <span>Phụ kiện</span>
+                            <i class="fa fa-angle-down fa-fw"></i>
+                        </a>
+                        <ul class="menu-child">
+                            <li class="menu-child-item">
+                                <a href="#" class="menu-child-link">Child</a>
+                            </li>
+                            <li class="menu-child-item">
+                                <a href="#" class="menu-child-link">Child</a>
+                            </li>
+                            <li class="menu-child-item">
+                                <a href="#" class="menu-child-link">Child</a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </header>
+
+
+        <footer class="MP__footer">
+            <div class="MP__footer-1">
+                <div class="MP__footer-1-item1">ETECH SHOP</div>
+                <div class="MP__footer-1-item2">
+                    <p><i class="fas fa-map-marker-alt fa-fw"></i>03 Quang Trung, Hải Châu, Đà Nẵng</p>
+                    <p><i class="fas fa-map-marker-alt fa-fw"></i>222 Nguyễn Văn Linh</p>
+                    <p><i class="fas fa-map-marker-alt fa-fw"></i>607 - 609 Lê Hồng Phong, p10, Quận 10, HCM</p>
+                    <p><i class="fas fa-map-marker-alt fa-fw"></i>315 Đỗ Xuân Hợp, Phường Phước Long, Quận 9</p>
+                    <p><i class="fas fa-map-marker-alt fa-fw"></i>97 Võ Văn Ngân, P.Linh Chiểu, Quận Thủ Đức, HCM</p>
+                </div>
+            </div>
+
+            <div class="MP__footer-2">
+                <div class="MP__footer-2-item1">
+                    <div>
+                        <i class="fab fa-facebook-f fa-2x fa-fw"></i>
+                        <i class="fas fa-phone-alt fa-2x fa-fw"></i>
+                        <i class="fas fa-envelope fa-2x fa-fw"></i>
+                    </div>
+                    <div>
+                        <h3>WEBSITE CÔNG NGHỆ ETECH</h3>
+                    </div>
+                    <div>
+                        <p>Gọi mua hàng: 1800.1060(7:30-22:00)</p>
+                        <p>Gọi khiếu nại: 1800.1080(7:30-22:00)</p>
+                        <p>Gọi bảo hành: 1800.1180(7:30-22:00)</p>
+                    </div>
+                </div>
+                <div class="MP__footer-2-item2">
+                    <p>Copyright by ETech.Com - ETECH.com</p>
+                </div>
+            </div>
+        </footer>
+
         <div>
             <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
             </asp:ContentPlaceHolder>
