Done BE_GioHang_DonHang

--- a/ETech.WebApp/KH/MasterPage.Master
+++ b/ETech.WebApp/KH/MasterPage.Master
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MasterPage</title>
+    
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -17,6 +17,7 @@
 
     <link rel="stylesheet" href="../wwwroot/font-awsome/css/all.css">
     <link rel="stylesheet" href="../wwwroot/css/kh_masterpage.css">
+    <title>MasterPage</title>
 
 <asp:ContentPlaceHolder ID="head" runat="server">
 </asp:ContentPlaceHolder>
@@ -96,9 +97,12 @@
                 </ul>
             </div>
         </header>
+        <div>
+            <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
+            </asp:ContentPlaceHolder>
+        </div>
 
-
-        <footer class="MP__footer">
+        <footer class="MP__footer" style="margin-top:20%!important;">
             <div class="MP__footer-1">
                 <div class="MP__footer-1-item1">ETECH SHOP</div>
                 <div class="MP__footer-1-item2">
@@ -132,10 +136,7 @@
             </div>
         </footer>
 
-        <div>
-            <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
-            </asp:ContentPlaceHolder>
-        </div>
+        
     </form>
 </body>
 </html>
