--- a/ETech.WebApp/KH/MasterPage.Master
+++ b/ETech.WebApp/KH/MasterPage.Master
@@ -30,8 +30,10 @@
                     <img src="../wwwroot/img/icon/logo_text.png" alt="LOGO">
                 </div>
                 <div class="MP__header-search">
-                    <input class="form-control" placeholder="Tìm kiếm..." type="search" aria-label="Search">
-                    <button class="btn" type="submit"><i class="fas fa-search" style="color: #000"></i></button>
+                   
+                    <asp:TextBox ID="txtsr" runat="server" CssClass="form-control" placeholder="Tìm kiếm..."></asp:TextBox>
+                    
+                    <asp:LinkButton ID="LinkButton1" CssClass="btn" runat="server" OnClick="LinkButton1_Click"><i class="fas fa-search" style="color: #000"></i></asp:LinkButton>
                 </div>
 
                 <div class="MP__header-items">
