tri xong parse 2.1

--- a/ETech.WebApp/KH/MasterPage.Master
+++ b/ETech.WebApp/KH/MasterPage.Master
@@ -83,7 +83,7 @@
                         </ul>
                     </li>
                     <li class="menu-item">
-                        <a href="#" class="menu-link">ĐƠN HÀNG</a>
+                        <a href="DonHang.aspx" class="menu-link">ĐƠN HÀNG</a>
                     </li>
                     <li class="menu-item">
                         <a href="#" class="menu-link">TIN TỨC</a>
