--- a/ETech.WebApp/KH/MasterPage.Master
+++ b/ETech.WebApp/KH/MasterPage.Master
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -19,20 +19,21 @@
     <link rel="stylesheet" href="../wwwroot/css/kh_masterpage.css">
     <title>ETech Shop</title>
 
-<asp:ContentPlaceHolder ID="head" runat="server">
-</asp:ContentPlaceHolder>
+    <asp:ContentPlaceHolder ID="head" runat="server">
+    </asp:ContentPlaceHolder>
 </head>
 <body>
     <form id="form1" runat="server">
         <header class="MP__container">
             <div class="MP__header1">
                 <div class="MP__header-logo">
-                    <a href="TrangChu.aspx"><img src="../wwwroot/img/icon/logo_text.png" alt="LOGO"></a>
+                    <a href="TrangChu.aspx">
+                        <img src="../wwwroot/img/icon/logo_text.png" alt="LOGO"></a>
                 </div>
                 <div class="MP__header-search">
-                   
+
                     <asp:TextBox ID="txtsr" runat="server" CssClass="form-control" placeholder=" Tìm kiếm..."></asp:TextBox>
-                    
+
                     <asp:LinkButton ID="LinkButton1" CssClass="btn" runat="server" OnClick="LinkButton1_Click"><i class="fas fa-search" style="color: #000"></i></asp:LinkButton>
                 </div>
 
@@ -42,12 +43,34 @@
                         <div>0</div>
                         <p>Giỏ hàng</p>
                     </div>
-                    <a href="#"><i class="far fa-user fa-2x"></i></a>
-                    <a href="#"><i class="fi fi-rr-User"></i></a>
-                    <div class="MP__header-item">
-                        <a href="TrangDangKyDangNhapKH.aspx">Đăng Ký</a>
-                        <a href="TrangDangKyDangNhapKH.aspx">Đăng Nhập</a>
-                    </div>
+                    <a href="#"><i class="far fa-user fa-2x fa-fw"></i></a>
+                    <%--<a href="#"><i class="fi fi-rr-User"></i></a>--%>
+                    <%--<div class="MP__header-item">--%>
+                    <%-- <a href="TrangDangKyDangNhapKH.aspx">Đăng Ký</a>
+                        <a href="TrangDangKyDangNhapKH.aspx">Đăng Nhập</a>--%>
+                    <%--<p>Trung Hậu</p>--%>
+                    <%--<i class="fas fa-chevron-down"></i>--%>
+
+                    <li class="menu-item has-child MP__header-item">
+                        <a href="#" class="menu-link">
+                            <p>TrungHau</p>
+                            <i class="fa fa-angle-down fa-fw"></i>
+                        </a>
+                        <ul class="menu-child">
+                            <li class="menu-child-item">
+                                <a href="#" class="menu-child-link">Quản lý tài khoản</a>
+                            </li>
+                            <li class="menu-child-item">
+                                <a href="#" class="menu-child-link">Đổi mật khẩu</a>
+                            </li>
+                            <li class="menu-child-item">
+                                <a href="#" class="menu-child-link">Đăng xuất<i class="fas fa-sign-out-alt"
+                                    style="margin-left: 5px;"></i></a>
+                            </li>
+                        </ul>
+                    </li>
+
+                    <%--</div>--%>
                 </div>
             </div>
 
@@ -104,7 +127,7 @@
             </asp:ContentPlaceHolder>
         </div>
 
-        <footer class="MP__footer" style="margin-top:20%!important;">
+        <footer class="MP__footer" style="margin-top: 20%!important;">
             <div class="MP__footer-1">
                 <div class="MP__footer-1-item1">ETECH SHOP</div>
                 <div class="MP__footer-1-item2">
@@ -138,7 +161,7 @@
             </div>
         </footer>
 
-        
+
     </form>
 </body>
 </html>
