--- a/ETech.WebApp/KH/MasterPage.Master
+++ b/ETech.WebApp/KH/MasterPage.Master
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -18,47 +18,69 @@
     <link rel="stylesheet" href="../wwwroot/font-awsome/css/all.css">
     <link rel="stylesheet" href="../wwwroot/css/kh_masterpage.css">
     <title>ETech Shop</title>
-
-<asp:ContentPlaceHolder ID="head" runat="server">
-</asp:ContentPlaceHolder>
+    <style>
+        .menu-child-link {
+            margin-left: 0 !important;
+        }
+    </style>
+    <asp:ContentPlaceHolder ID="head" runat="server">
+    </asp:ContentPlaceHolder>
 </head>
 <body>
     <form id="form1" runat="server">
         <header class="MP__container">
             <div class="MP__header1">
                 <div class="MP__header-logo">
-                    <a href="TrangChu.aspx"><img src="../wwwroot/img/icon/logo_text.png" alt="LOGO"></a>
+                    <a href="TrangChu.aspx">
+                        <img src="../wwwroot/img/icon/logo_text.png" alt="LOGO"></a>
                 </div>
                 <div class="MP__header-search">
-                   
+
                     <asp:TextBox ID="txtsr" runat="server" CssClass="form-control" placeholder=" Tìm kiếm..."></asp:TextBox>
-                    
+
                     <asp:LinkButton ID="LinkButton1" CssClass="btn" runat="server" OnClick="LinkButton1_Click"><i class="fas fa-search" style="color: #000"></i></asp:LinkButton>
                 </div>
 
                 <div class="MP__header-items">
-                     <a href="GioHang.aspx"><i class="fas fa-shopping-cart fa-2x" style="color: #3e67b9"></i></a>
+                    <a href="GioHang.aspx"><i class="fas fa-shopping-cart fa-2x" style="color: #3e67b9"></i></a>
                     <div class="MP__giohang">
-                        <div class="cart-wrapper" style="height: 20px;margin-top:8px;  width: 45px;background-color: #555;border-radius: 10%;background-color:#3e67b9;padding-top:1px">
+                        <div class="cart-wrapper" style="height: 20px; margin-top: 8px; width: 45px; background-color: #555; border-radius: 10%; background-color: #3e67b9; padding-top: 1px">
                             <asp:Label ID="lbSL" runat="server" Text="0"></asp:Label>
                         </div>
                         <p>Cart</p>
                     </div>
 
-                    <asp:HyperLink ID="hlUser" runat="server">
-                        <i class="far fa-user fa-2x"></i>
-                        <i class="fi fi-rr-User"></i>     
-                    </asp:HyperLink>
-                    <div class="label-user" style="color:#585858;margin-left:10px;margin-top:17px;font-weight:600!important">
-                            <asp:Label ID="lbTaiKhoan" runat="server" Text=""></asp:Label>
-                        </div>
+                    <a href="#"><i class="far fa-user fa-2x fa-fw"></i></a>
+
+                    <asp:Panel ID="panelUser" runat="server">
+                        <li class="menu-item has-child MP__header-item" style="margin-left: 0!important">
+                            <a href="#" class="menu-link">
+                                <p>
+                                    <asp:Label ID="lbTaiKhoan" runat="server" Text=""></asp:Label></p>
+                                <i class="fa fa-angle-down fa-fw"></i>
+                            </a>
+                            <ul class="menu-child">
+                                <li class="menu-child-item">
+                                    <asp:HyperLink ID="HyperLink1" CssClass="menu-child-link" runat="server">Quản lý tài khoản</asp:HyperLink>
+                                </li>
+                                <li class="menu-child-item">
+                                    <asp:HyperLink ID="HyperLink2" CssClass="menu-child-link" runat="server">Đổi mật khẩu</asp:HyperLink>
+                                </li>
+                                <li class="menu-child-item">
+                                    <asp:LinkButton ID="LinkButton2" CssClass="menu-child-link" runat="server" OnClick="LinkButton2_Click">Đăng xuất<i class="fas fa-sign-out-alt"
+                                    style="margin-left: 5px;"></i></asp:LinkButton>
+                                </li>
+                            </ul>
+                        </li>
+                    </asp:Panel>
+
                     <asp:Panel ID="panelDangNhap" runat="server">
                         <div class="MP__header-item">
-                        <a href="TrangDangKyDangNhapKH.aspx">Đăng Ký</a>
-                        <a href="TrangDangKyDangNhapKH.aspx">Đăng Nhập</a>
+                            <a href="TrangDangKyDangNhapKH.aspx">Đăng Ký</a>
+                            <a href="TrangDangKyDangNhapKH.aspx">Đăng Nhập</a>
                         </div>
                     </asp:Panel>
-                    
+
                 </div>
             </div>
 
@@ -113,7 +135,7 @@
             </asp:ContentPlaceHolder>
         </div>
 
-        <footer class="MP__footer" style="margin-top:20%!important;">
+        <footer class="MP__footer" style="margin-top: 20%!important;">
             <div class="MP__footer-1">
                 <div class="MP__footer-1-item1">ETECH SHOP</div>
                 <div class="MP__footer-1-item2">
@@ -147,7 +169,7 @@
             </div>
         </footer>
 
-        
+
     </form>
 </body>
 </html>
