--- a/ETech.WebApp/KH/MasterPage.Master
+++ b/ETech.WebApp/KH/MasterPage.Master
@@ -49,10 +49,7 @@
                         </div>
                         <p>Cart</p>
                     </div>
-
-                </div>
-            </div>
-            <a href="#"><i class="far fa-user fa-2x fa-fw"></i></a>
+                    <a href="#"><i class="far fa-user fa-2x fa-fw"></i></a>
 
                     <asp:Panel ID="panelUser" runat="server">
                         <li class="menu-item has-child MP__header-item" style="margin-left: 0!important">
@@ -82,10 +79,13 @@
                             <a href="TrangDangKyDangNhapKH.aspx">Đăng Nhập</a>
                         </div>
                     </asp:Panel>
+                </div>
+            </div>
+            
             <div class="MP__header2">
                 <ul class="menu">
                     <li class="menu-item">
-                        <a href="#" class="menu-link">TRANG CHỦ</a>
+                        <a href="TrangChu.aspx" class="menu-link">TRANG CHỦ</a>
                     </li>
                     <li class="menu-item has-child">
                         <a href="#" class="menu-link">
