--- a/ETech.WebApp/KH/MasterPage.Master
+++ b/ETech.WebApp/KH/MasterPage.Master
@@ -22,6 +22,10 @@
         .menu-child-link {
             margin-left: 0 !important;
         }
+        .menu-link:hover{
+            color: #3e67b9;
+            transition: 0.25s;
+        }
     </style>
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
@@ -107,23 +111,6 @@
                     </li>
                     <li class="menu-item">
                         <a href="#" class="menu-link">TIN TỨC</a>
-                    </li>
-                    <li class="menu-item has-child">
-                        <a href="#" class="menu-link">
-                            <span>PHỤ KIỆN</span>
-                            <i class="fa fa-angle-down fa-fw"></i>
-                        </a>
-                        <ul class="menu-child">
-                            <li class="menu-child-item">
-                                <a href="#" class="menu-child-link">Child</a>
-                            </li>
-                            <li class="menu-child-item">
-                                <a href="#" class="menu-child-link">Child</a>
-                            </li>
-                            <li class="menu-child-item">
-                                <a href="#" class="menu-child-link">Child</a>
-                            </li>
-                        </ul>
                     </li>
                 </ul>
             </div>
