--- a/ETech.WebApp/KH/MasterPage.Master
+++ b/ETech.WebApp/KH/MasterPage.Master
@@ -26,6 +26,12 @@
             color: #3e67b9;
             transition: 0.25s;
         }
+        form{
+            overflow:hidden;
+        }
+        .search-box{
+           
+        }
     </style>
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
@@ -40,7 +46,7 @@
                 </div>
                 <div class="MP__header-search">
 
-                    <asp:TextBox ID="txtsr" runat="server" CssClass="form-control" placeholder=" Tìm kiếm..."></asp:TextBox>
+                    <asp:TextBox ID="txtsr" runat="server" CssClass="form-control search-box" placeholder=" Tìm kiếm..."></asp:TextBox>
 
                     <asp:LinkButton ID="LinkButton1" CssClass="btn" runat="server" OnClick="LinkButton1_Click"><i class="fas fa-search" style="color: #000"></i></asp:LinkButton>
                 </div>
